--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -363,7 +363,9 @@
 
   <!-- Sección 1: Formulario de creación de evento -->
 <mat-card>
-  <mat-card-title>Nuevo evento</mat-card-title>
+  <br>
+  <mat-card-title>&nbsp;Nuevo evento</mat-card-title>
+  <br>
   <mat-card-content>
     <form #eventoForm="ngForm">
       <mat-form-field appearance="outline" style="width: 100%;">
@@ -406,7 +408,9 @@
 
   <!-- Sección 2: Tabla de eventos -->
   <mat-card>
-    <mat-card-title>Lista de eventos</mat-card-title>
+    <br>
+    <mat-card-title>&nbsp; Lista de eventos</mat-card-title>
+    <br>
     <mat-card-content>
       <table mat-table [dataSource]="eventos" class="mat-elevation-z8" style="width: 100%;">
 
