--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -60,7 +60,68 @@
         </div>
     </mat-tab>
 
+    <mat-tab label="Cards landing">
+        <mat-divider></mat-divider>
 
+        <div>
+
+
+            <input matInput (keyup)="applyGlobalFilter($event)" placeholder="Buscar" class="global-filter">
+        </div>
+
+
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource2" matSort class="mat-elevation-z8">
+
+
+
+
+                <ng-container matColumnDef="Detalle del evento">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> descripción</th>
+                    <td mat-cell *matCellDef="let student"> {{ student.descripcion }} </td>
+                </ng-container>
+
+                <!-- Columna Nombre -->
+         <ng-container matColumnDef="imagen">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header> Imagen </th>
+  <td mat-cell *matCellDef="let student">
+    <img *ngIf="student.image" [src]="student.image" alt="imagen" width="50">
+  </td>
+</ng-container>
+
+                   <ng-container matColumnDef="url">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Url </th>
+                    <td mat-cell *matCellDef="let student"> {{ student.url }} </td>
+                </ng-container>
+                <ng-container matColumnDef="Opciones">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Opciones </th>
+
+
+                    <td mat-cell *matCellDef="let student">
+
+                        <br>
+                        <input type="file" (change)="onFileSelected($event, student)" accept="image/*">
+                        &nbsp;
+                        <a mat-button class="btn btn-success btn-sm" (click)="uploadImage(student)">
+                            <i class="fa fa-save"></i>
+                        </a>
+
+                        <!-- Mostrar la imagen subida -->
+                        <img *ngIf="student.uploadedImageUrl" [src]="student.uploadedImageUrl" alt="Imagen subida"
+                            style="max-width: 200px; display: block; margin-top: 10px;">
+
+
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
+            </table>
+
+            <mat-paginator #paginatorLogin [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]"
+                showFirstLastButtons></mat-paginator>
+
+        </div>
+    </mat-tab>
 
  
 </mat-tab-group>
