--- a/src/app/administracion/administracion.component.html
+++ b/src/app/administracion/administracion.component.html
@@ -149,15 +149,15 @@
 
           <!-- Fotografía -->
           <td>
-            <img [src]="'http://localhost:3000/' + limpiarRuta(ins.fotografia)" alt="Foto" width="70" class="rounded">
+            <img [src]="url + limpiarRuta(ins.fotografia)" alt="Foto" width="70" class="rounded">
           </td>
 
           <!-- Documentos -->
           <td>
-            <a *ngIf="ins.registro_civil" [href]="'http://localhost:3000/' + limpiarRuta(ins.registro_civil)" target="_blank">Registro Civil</a><br>
-            <a *ngIf="ins.eps" [href]="'http://localhost:3000/' + limpiarRuta(ins.eps)" target="_blank">EPS</a><br>
-            <a *ngIf="ins.carnet_vacunas" [href]="'http://localhost:3000/' + limpiarRuta(ins.carnet_vacunas)" target="_blank">Carnet Vacunas</a><br>
-            <a *ngIf="ins.doc_acudiente" [href]="'http://localhost:3000/' + limpiarRuta(ins.doc_acudiente)" target="_blank">Doc. Acudiente</a>
+            <a *ngIf="ins.registro_civil" [href]="url + limpiarRuta(ins.registro_civil)" target="_blank">Registro Civil</a><br>
+            <a *ngIf="ins.eps" [href]="url+ limpiarRuta(ins.eps)" target="_blank">EPS</a><br>
+            <a *ngIf="ins.carnet_vacunas" [href]="url + limpiarRuta(ins.carnet_vacunas)" target="_blank">Carnet Vacunas</a><br>
+            <a *ngIf="ins.doc_acudiente" [href]="url + limpiarRuta(ins.doc_acudiente)" target="_blank">Doc. Acudiente</a>
           </td>
 
           <!-- Acudiente -->
@@ -172,7 +172,7 @@
           <td>
             <ng-container *ngIf="boletinesArray(ins.boletines).length > 0; else sinBoletines">
               <div *ngFor="let b of boletinesArray(ins.boletines); let j = index">
-                <a [href]="'http://localhost:3000/' + limpiarRuta(b)" target="_blank">Boletín {{ j + 1 }}</a><br>
+                <a [href]="url + limpiarRuta(b)" target="_blank">Boletín {{ j + 1 }}</a><br>
               </div>
             </ng-container>
             <ng-template #sinBoletines>
@@ -187,7 +187,6 @@
   <mat-divider class="my-3"></mat-divider>
 
   <div class="text-center">
-    <h3>Asignación de estudiantes a cursos</h3>
   </div>
 </mat-tab>
 
