--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -5,32 +5,39 @@ header {
   padding: 1rem;
   background: #f4f4f4;
 }
-.card-evento:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+
+.card-evento:hover .texto-hover {
+  height: 50%;
+}
+.card-evento:hover img {
+  transform: scale(1.05);
+}
+/* En styles.scss */
+.animated-bg {
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  background: linear-gradient(135deg, #FFF5BA, #A8D5BA, #ffffff, #0033A0);
+  background-size: 400% 400%;
+  animation: fondoAnimado 20s ease infinite;
+  min-height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.animated-bg::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  backdrop-filter: blur(12px);
+  z-index: -1;
+}
+
+@keyframes fondoAnimado {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 
-.card-evento {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeInUp 0.6s ease forwards;
-}
-
-
-.card-evento:nth-child(1) { animation-delay: 0.1s; }
-.card-evento:nth-child(2) { animation-delay: 0.2s; }
-.card-evento:nth-child(3) { animation-delay: 0.3s; }
-
-
-@keyframes fadeInUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
