fix form register

--- a/src/app/registro-dialog/registro-dialog.component.html
+++ b/src/app/registro-dialog/registro-dialog.component.html
@@ -1,4 +1,5 @@
-<h3 class="mb-4 text-center">Formulario de Inscripción</h3>
+<h3 class="mb-4 text-center">
+  <br>Formulario de Inscripción</h3>
 
 <form [formGroup]="form" (ngSubmit)="guardarFormulario()" class="p-4 container-fluid">
 
